# apius_lang_entropy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  prepare-release.yml  release.yml
apius_lang_entropy/appserver/static/: entropy_lab.js
apius_lang_entropy/default/: app.conf  commands.conf  restmap.conf  web.conf
apius_lang_entropy/default/data/ui/nav/: default.xml
apius_lang_entropy/default/data/ui/views/: entropy_lab.xml  entropy_model_upload.xml
apius_lang_entropy/lookups/: english_bigrams_probabilities.csv  polish_bigrams_probabilities.csv
appserver/static/: entropy_lab.js  entropy_upload.js
default/: app.conf  commands.conf  searchbnf.conf
default/data/ui/views/: entropy_lab.xml  entropy_model_upload.xml
